--- a/Gemini_API.ipynb
+++ b/Gemini_API.ipynb
@@ -2,14 +2,17 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "d70gOl7rbO87"
-      },
+      "metadata": {},
       "source": [
-        "\n",
-        "\n",
-        "**Chat Bot Application using Gemini AI**\n",
-        "\n"
+        "**To get the gemini api key**\n",
+        "[Click here to get API Key](https://aistudio.google.com/apikey)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Chat Bot Application using Gemini AI**\n"
       ]
     },
     {
