--- a/Gemini_API_Chatbot.ipynb
+++ b/Gemini_API_Chatbot.ipynb
@@ -101,7 +101,7 @@
         "id": "zf5KLslZREu0"
       },
       "source": [
-        "**Configure the openai key***"
+        "**Configure the gemini api key**"
       ]
     },
     {
