--- a/Stability_API_img.ipynb
+++ b/Stability_API_img.ipynb
@@ -127,6 +127,13 @@
     "            with open(\"output.png\", \"wb\") as f:\n",
     "                f.write(artifact.binary)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[img](D:\\kailas\\gen ai\\Gen-AI\\output.png)"
+   ]
   }
  ],
  "metadata": {
