--- a/Stability_API_img.ipynb
+++ b/Stability_API_img.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[img](D:\\kailas\\gen ai\\Gen-AI\\output.png)"
+    "![Output Image](https://github.com/Kailas-lab/Gen-AI/blob/main/output.png)"
    ]
   }
  ],
