--- a/Stability_API_img.ipynb
+++ b/Stability_API_img.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Output Image](D:\\kailas\\gen ai\\Gen-AI\\images\\output.png)"
+    "![Output Image](images/output.png)\n"
    ]
   }
  ],
