--- a/Gemini_AI/Gemini_img_process.ipynb
+++ b/Gemini_AI/Gemini_img_process.ipynb
@@ -85,6 +85,58 @@
     "# Print the response\n",
     "print(response.text)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysie using locally instead of url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analysis Result: Here's a description of the image:\n",
+      "\n",
+      "Close-up view of an orange tabby cat lying on a light brown wood-grain floor. \n",
+      "\n",
+      "\n",
+      "The cat is positioned slightly off-center, taking up a significant portion of the frame. Its eyes are closed, and it appears relaxed and peaceful. The fur is a rich orange with darker tabby markings, and some white fur is visible on its chest and belly. The cat's paws are tucked neatly under its body.\n",
+      "\n",
+      "\n",
+      "The floor is smooth and shows a distinct wood grain pattern. The lighting is soft and diffused, with no harsh shadows, suggesting natural or soft indoor lighting. The overall mood is calm and serene.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import google.generativeai as genai\n",
+    "import base64\n",
+    "\n",
+    "# Set up Gemini API\n",
+    "genai.configure(api_key=\"AIzaSyCupd3Dn6SV1lOm2IW6GK89kHmppz7H2LM\")\n",
+    "\n",
+    "# Function to read image\n",
+    "def encode_image(image_path):\n",
+    "    with open(image_path, \"rb\") as image_file:\n",
+    "        return base64.b64encode(image_file.read()).decode(\"utf-8\")\n",
+    "\n",
+    "def analyze_image(image_path):\n",
+    "    img_data = encode_image(image_path)\n",
+    "    model = genai.GenerativeModel(\"gemini-1.5-flash\")\n",
+    "\n",
+    "    response = model.generate_content([{\"mime_type\": \"image/jpeg\", \"data\": img_data}, \"Describe this image.\"])\n",
+    "    print(\"Analysis Result:\", response.text)\n",
+    "\n",
+    "# Run\n",
+    "analyze_image(\"r.jpg\")\n"
+   ]
   }
  ],
  "metadata": {
