--- a/Idea.ipynb
+++ b/Idea.ipynb
@@ -39,11 +39,27 @@
     "\n",
     "[canva-ai](https://www.canva.com/design/DAGfcpKMsek/kLVodp3Y96Lzko5GYg6jTA/edit?ui=eyJFIjp7IkE_IjoiViIsIkIiOiJDIn0sIkciOnsiQiI6dHJ1ZX19)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "963f6ee70179c3739b12edc2055a0d647fae02cf = deepgram api key\n",
+    "speech to text"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
