--- a/Serp-API/Fetch.ipynb
+++ b/Serp-API/Fetch.ipynb
@@ -36,8 +36,8 @@
       "1. Five Trends in AI and Data Science for 2025 - https://sloanreview.mit.edu/article/five-trends-in-ai-and-data-science-for-2025/\n",
       "2. 8 AI and machine learning trends to watch in 2025 - https://www.techtarget.com/searchenterpriseai/tip/9-top-AI-and-machine-learning-trends\n",
       "3. 6 AI trends you'll see more of in 2025 - https://news.microsoft.com/source/features/ai/6-ai-trends-youll-see-more-of-in-2025/\n",
-      "4. AI Index Report 2024 - Stanford University - https://aiindex.stanford.edu/report/\n",
-      "5. 5 AI Trends to Watch in 2025 - https://www.coursera.org/articles/ai-trends\n"
+      "4. Latest Trends in Artificial Intelligence - https://www.newark.com/latest-trends-in-artificial-intelligence\n",
+      "5. 14 AI Trends Transforming Tech in 2025 and Beyond - https://www.digitalocean.com/resources/articles/ai-trends\n"
      ]
     }
    ],
