--- a/Lang-chain/Promp_temp.ipynb
+++ b/Lang-chain/Promp_temp.ipynb
@@ -68,7 +68,7 @@
     "# Initialize LLM (Google Gemini)\n",
     "llm = ChatGoogleGenerativeAI(model=\"gemini-1.5-flash\", temperature=0.7)\n",
     "\n",
-    "# 🎨 Define Translation Styles\n",
+    "#  Define Translation Styles\n",
     "templates = {\n",
     "    \"1\": PromptTemplate(\n",
     "        input_variables=[\"text\", \"target_language\"],\n",
@@ -88,11 +88,11 @@
     "    )\n",
     "}\n",
     "\n",
-    "# 📝 User Inputs\n",
+    "#  User Inputs\n",
     "text_to_translate = input(\"Enter the text you want to translate: \")\n",
     "target_language = input(\"Enter the target language (e.g., French, Spanish, Hindi): \")\n",
     "\n",
-    "# 🎭 Choose Translation Style\n",
+    "#  Choose Translation Style\n",
     "print(\"\\nSelect Translation Style:\")\n",
     "print(\"1. Casual (Native Speaker Style)\")\n",
     "print(\"2. Formal (Official Document)\")\n",
@@ -100,19 +100,19 @@
     "print(\"4. Bilingual (With English Reference)\")\n",
     "style_choice = input(\"Enter your choice (1-4): \")\n",
     "\n",
-    "# 🎯 Validate Choice & Execute Only One\n",
+    "#  Validate Choice & Execute Only One\n",
     "if style_choice in templates:\n",
     "    chosen_template = templates[style_choice]  # Pick only the selected template\n",
     "    chain = LLMChain(llm=llm, prompt=chosen_template)  # Create chain only for the selected template\n",
     "\n",
-    "    # 🔄 Run the chain and get the response\n",
+    "    #  Run the chain and get the response\n",
     "    response = chain.run({\"text\": text_to_translate, \"target_language\": target_language})\n",
     "\n",
-    "    # ✅ Display Only the Selected Translation\n",
-    "    print(f\"\\n🔄 Translated Text ({target_language} - Style {style_choice}):\")\n",
+    "    #  Display Only the Selected Translation\n",
+    "    print(f\"\\n Translated Text ({target_language} - Style {style_choice}):\")\n",
     "    print(response)\n",
     "else:\n",
-    "    print(\"❌ Invalid choice! Please select between 1-4.\")"
+    "    print(\"Invalid choice! Please select between 1-4.\")"
    ]
   }
  ],
