--- a/Lang-chain/Prompt_temp.ipynb
+++ b/Lang-chain/Prompt_temp.ipynb
@@ -114,6 +114,126 @@
     "else:\n",
     "    print(\"Invalid choice! Please select between 1-4.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**String Prompt Template**\n",
+    "\n",
+    "These prompt templates are used to format a single string, and generally are used for simpler inputs. \n",
+    "\n",
+    "The PromptTemplate only creates text prompts; it does not generate responses.\n",
+    "You need to pass the formatted prompt to an LLM (like OpenAI GPT, Gemini, or Llama) to get a joke."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "StringPromptValue(text='Tell me a joke about cats')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_core.prompts import PromptTemplate\n",
+    "\n",
+    "prompt_template = PromptTemplate.from_template(\"Tell me a joke about {topic}\")\n",
+    "\n",
+    "prompt_template.invoke({\"topic\": \"cats\"})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Chat Prompt Template**\n",
+    "\n",
+    "These prompt templates are used to format a list of messages. These \"templates\" consist of a list of templates themselves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "messages=[SystemMessage(content='You are a helpful assistant', additional_kwargs={}, response_metadata={}), HumanMessage(content='Tell me a joke about cats', additional_kwargs={}, response_metadata={})]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n",
+    "# Define the chat prompt template correctly\n",
+    "prompt_template = ChatPromptTemplate.from_messages([\n",
+    "   (\"system\", \"You are a helpful assistant\"),\n",
+    "   (\"user\", \"Tell me a joke about {topic}\")\n",
+    "])\n",
+    "\n",
+    "# Invoke the prompt with a topic\n",
+    "formatted_prompt = prompt_template.invoke({\"topic\": \"cats\"})\n",
+    "\n",
+    "# Print the output\n",
+    "print(formatted_prompt)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Messages PlaceHolder Template**\n",
+    "\n",
+    "This prompt template is responsible for adding a list of messages in a particular place. In the above ChatPromptTemplate, we saw how we could format two messages, each one a string. But what if we wanted the user to pass in a list of messages that we would slot into a particular spot?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "messages=[SystemMessage(content='You are a helpful assistant', additional_kwargs={}, response_metadata={}), HumanMessage(content='Hi!', additional_kwargs={}, response_metadata={}), AIMessage(content='Hello! How can I help you?', additional_kwargs={}, response_metadata={}), HumanMessage(content='Tell me a joke about cats.', additional_kwargs={}, response_metadata={})]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+    "from langchain_core.messages import HumanMessage, AIMessage\n",
+    "\n",
+    "# Define the chat prompt template\n",
+    "prompt_template = ChatPromptTemplate.from_messages([\n",
+    "   (\"system\", \"You are a helpful assistant\"),\n",
+    "   MessagesPlaceholder(variable_name=\"msgs\")\n",
+    "])\n",
+    "\n",
+    "# Provide multiple messages\n",
+    "messages = [\n",
+    "    HumanMessage(content=\"Hi!\"),\n",
+    "    AIMessage(content=\"Hello! How can I help you?\"),\n",
+    "    HumanMessage(content=\"Tell me a joke about cats.\"),\n",
+    "]\n",
+    "\n",
+    "# Invoke the prompt with multiple messages\n",
+    "formatted_prompt = prompt_template.invoke({\"msgs\": messages})\n",
+    "\n",
+    "# Print the formatted prompt\n",
+    "print(formatted_prompt)\n"
+   ]
   }
  ],
  "metadata": {
